--- a/css/modern-blog.css
+++ b/css/modern-blog.css
@@ -1,10 +1,7 @@
 
 /*CARD */
 
-.card-img img {
-  height: auto;
-  min-width: 100%;
-}
+
 
 .card {
 	position: relative;
@@ -31,7 +28,7 @@
 	overflow: hidden;
 }
 
-.card__image {
+.card__image image {
 	position: absolute;
 	top: 0;
 	left: 0;
