--- a/css/modern-blog.css
+++ b/css/modern-blog.css
@@ -174,6 +174,10 @@
 }
 
 @media only screen and (max-width: 400px) {
+    .card {
+		width: 96%;
+		padding-bottom: 67.2%;
+	}
 	.card__caption {
 		font-size: 1.25em;
 		padding: 35px 0px 0px;
