--- a/css/modern-blog.css
+++ b/css/modern-blog.css
@@ -179,6 +179,16 @@
 	    max-width: 1200px;
 		min-width: 100px;
 	}
+
+    .card__image image {
+	position: absolute;
+	top: 0;
+	left: 0;
+	display: block;
+	width: 100%;
+	height: 100%;
+    }
+
 	.card__caption {
 		font-size: 1.25em;
 		padding: 35px 0px 0px;
