--- a/css/modern-blog.css
+++ b/css/modern-blog.css
@@ -185,8 +185,8 @@
 	top: 0;
 	left: 0;
 	display: block;
-	width: 100%;
-	height: 100%;
+	max-width: 100%;
+	height: auto;
     }
 
 	.card__caption {
