--- a/css/modern-blog.css
+++ b/css/modern-blog.css
@@ -174,18 +174,9 @@
 }
 
 @media only screen and (max-width: 400px) {
-    .card {
-		width: 100%;
-	    max-width: 1200px;
-		min-width: 100px;
-	}
-
+    
     .card__image image {
-	position: absolute;
-	top: 0;
-	left: 0;
-	display: block;
-	max-width: 100%;
+	min-width: 100%;
 	height: auto;
     }
 
