--- a/css/modern-blog.css
+++ b/css/modern-blog.css
@@ -176,7 +176,7 @@
 @media only screen and (max-width: 400px) {
     
     .card__image image {
-	min-width: 100%;
+	width: 100%;
 	height: auto;
     }
 
