--- a/css/modern-blog.css
+++ b/css/modern-blog.css
@@ -175,7 +175,10 @@
 
 @media only screen and (max-width: 400px) {
     
-    
+    .card__content {
+	max-width: 100%;
+}
+
 	.card__caption {
 		font-size: 1.25em;
 		padding: 35px 0px 0px;
@@ -186,7 +189,6 @@
 	.card__copy {
 		font-size: 90%;
 		padding: 25px 0px 100px;
-        width: 100%;
 	}
 }
 
